# teleg-rust-berry

./: .gitignore  Cargo.toml  README.md  data.json
src/: main.rs
