[package]
name = "teleg-rust-berry"
version = "0.1.0"
authors = ["Constantin <constantin.gierczak.galle@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.8.0"
futures = { version = "0.3", default-features = false }
tokio = {"version"= "0.2", features=["rt-threaded", "macros"]}
json = "*"
serde_json = "*"
serde = "*"

lopdf = "*"